--- a/login.html
+++ b/login.html
@@ -8,32 +8,32 @@
     <meta name="keywords" content="taxido">
     <meta name="author" content="taxido">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="assets/images/logo/favicon.png" type="image/x-icon">
+    <link rel="icon" href="./assets/images/logo/favicon.png" type="image/x-icon">
     <title>Taxido - User App </title>
 
-    <link rel="apple-touch-icon" href="assets/images/logo/favicon.png">
+    <link rel="apple-touch-icon" href="./assets/images/logo/favicon.png">
     <meta name="title-color" content="#1F1F1F">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="taxido">
-    <meta name="msapplication-TileImage" content="assets/images/logo/favicon.png">
+    <meta name="msapplication-TileImage" content="./assets/images/logo/favicon.png">
 
     <meta name="msapplication-TileColor" content="#FFFFFF">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
-    <link rel="stylesheet" type="text/css" href="assets/css/GTWalsheimPro.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/vendors/iconsax.css">
-    <link rel="stylesheet" id="rtl-link" type="text/css" href="assets/css/vendors/bootstrap.css">
-    <link rel="stylesheet" id="change-link" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/GTWalsheimPro.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/iconsax.css">
+    <link rel="stylesheet" id="rtl-link" type="text/css" href="./assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" id="change-link" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
     <header id="header" class="auth-header">
         <div class="custom-container">
             <div class="header-panel  pb-0">
-                <img class="img-fluid mx-auto logo user-logo" src="assets/images/logo/user/logo-utama.svg"
+                <img class="img-fluid mx-auto logo user-logo" src="./assets/images/logo/user/logo-utama.svg"
                     alt="logo">
                 <img class="img-fluid mx-auto logo-dark user-logo"
-                    src="assets/images/logo/user/user-logo-dark.png" alt="logo">
+                    src="./assets/images/logo/user/user-logo-dark.png" alt="logo">
             </div>
         </div>
     </header>
@@ -74,12 +74,12 @@
             </div>
         </div>
     </div>
-    <script src="assets/js/iconsax.js"></script>
-    <script src="assets/js/password-show.js"></script>
-    <script src="assets/js/sticky-header.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/template-setting.js"></script>
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/iconsax.js"></script>
+    <script src="./assets/js/password-show.js"></script>
+    <script src="./assets/js/sticky-header.js"></script>
+    <script src="./assets/js/bootstrap.bundle.min.js"></script>
+    <script src="./assets/js/template-setting.js"></script>
+    <script src="./assets/js/script.js"></script>
     <script>
         let handleLogin = (e) => {
             if (e) {e.preventDefault();}
