--- a/login.html
+++ b/login.html
@@ -23,8 +23,8 @@
     
     <link rel="stylesheet" type="text/css" href="./assets/css/GTWalsheimPro.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/vendors/iconsax.css">
-    <link rel="stylesheet" id="rtl-link" type="text/css" href="./assets/css/vendors/bootstrap.css">
-    <link rel="stylesheet" id="change-link" type="text/css" href="./assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/vendors/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
     <header id="header" class="auth-header">
