--- a/login.html
+++ b/login.html
@@ -25,6 +25,9 @@
     <link rel="stylesheet" type="text/css" href="./assets/css/vendors/iconsax.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/vendors/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+    <style>
+        .auth-bg-image-box .auth-bg-image{background-size: cover;height: calc(100vh - 360px);}
+    </style>
 </head>
 <body>
     <header id="header" class="auth-header">
