--- a/login.html
+++ b/login.html
@@ -8,12 +8,12 @@
     <meta name="keywords" content="taxido">
     <meta name="author" content="taxido">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" href="./assets/images/logo/favicon.png" type="image/x-icon">
-    <title>Taxido - User App </title>
+    <link rel="icon" href="./assets/images/logopk.png" type="image/x-icon">
+    <title>FS CRM</title>
 
     <link rel="apple-touch-icon" href="./assets/images/logo/favicon.png">
     <meta name="title-color" content="#1F1F1F">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">Understand this warning
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="taxido">
     <meta name="msapplication-TileImage" content="./assets/images/logo/favicon.png">
