--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
     <link rel="apple-touch-icon" href="./assets/images/logo/favicon.png">
     <meta name="title-color" content="#1F1F1F">
-    <meta name="mobile-web-app-capable" content="yes">Understand this warning
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="taxido">
     <meta name="msapplication-TileImage" content="./assets/images/logo/favicon.png">
