--- a/listpelanggan.html
+++ b/listpelanggan.html
@@ -145,7 +145,7 @@
                     border-radius: 6px;
                     padding: 8px;
                 ">
-                    <img class="icon" src="../assets/images/svg/gps.svg" alt="location" style="width:18px; margin-right:6px;">
+                    <img class="icon" src="./assets/images/svg/gps.svg" alt="location" style="width:18px; margin-right:6px;">
                     <input type="text" id="searchInput" class="form-control border-0 p-0" placeholder="Enter destination" style="background: none;flex:1; box-shadow:none;">
                     <img id="clearBtn" class="clear-btn" width="12" style="display:none; cursor:pointer;margin-right:6px;" src="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e" alt="clear">
                 </div>
@@ -160,7 +160,7 @@
                 <li class="recent-place-item" style="display: none;">
                     <div class="recent-box">
                         <div class="recent-icon">
-                            <img class="icon" src="../assets/images/svg/location-fill.svg" alt="location">
+                            <img class="icon" src="./assets/images/svg/location-fill.svg" alt="location">
                         </div>
                         <div>
                             <h5 class="card-name"></h5>
