--- a/listpelanggan.html
+++ b/listpelanggan.html
@@ -79,7 +79,7 @@
             transition: transform 0.2s ease-in-out;
         }
         .pulse{animation: pulse 1.5s infinite;}
-        .addcust svg path {stroke: #fff;}
+        .addcust svg path {stroke: #fff!important;}
         @keyframes pulse {
             0% {transform: scale(1);box-shadow: 0 0 0 0 rgba(197, 63, 63, 0.4);}
             70% {transform: scale(1.1);box-shadow: 0 0 0 20px rgba(197, 63, 63, 0);}
