--- a/home.html
+++ b/home.html
@@ -319,11 +319,11 @@
 
                                 <ul class="ride-location-listing mt-3">
                                     <li class="location-box">
-                                        <img class="icon" src="../assets/images/svg/location-fill.svg" alt="location">
+                                        <img class="icon" src="./assets/images/svg/location-fill.svg" alt="location">
                                         <h5 class="fw-light title-color">${d.Address||''}</h5>
                                     </li>
                                     <li class="location-box ${(!tanggal && !jam) ? 'hide':''}">
-                                        <img class="icon" src="../assets/images/svg/gps.svg" alt="gps">
+                                        <img class="icon" src="./assets/images/svg/gps.svg" alt="gps">
                                         <div class="flex-spacing" style="width:100%;">
                                             <span class="fw-light title-color border-0">${tanggal}</span>
                                             <span class="fw-light title-color border-0 ml-auto ${jamClass}">${jam}</span>
