--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>FS CRM - <?= strtoupper($path) ?></title>
+    <title>FS CRM - LOGIN</title>
     <style>
         .auth-bg-image-box .auth-bg-image{background-size: cover;height: calc(100vh - 360px);}
     </style>
