--- a/listpelanggan.html
+++ b/listpelanggan.html
@@ -113,7 +113,6 @@
             0% { background-position: -200% 0; }
             100% { background-position: 200% 0; }
         }
-        .e404{ width: 100%; margin: 10px 0 20px; height: 100vh; position: fixed; background: #fff; left: 0; top: 0; }
     </style>
 </head>
 
@@ -124,7 +123,7 @@
             <div class="flex-spacing gap-2 w-100" style="align-items: center; display: flex;">
                 
                 <!-- Tombol Back -->
-                <a href="index.html" class="back-btn">
+                <a href="./index.html" class="back-btn">
                 <i class="iconsax icon-btn" data-icon="chevron-left" height="40" width="40" style="border: none;margin-left: -10px;">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <path d="M15.0013 20.6695C14.8113 20.6695 14.6213 20.5995 14.4713 20.4495L7.95125 13.9295C6.89125 12.8695 6.89125 11.1295 7.95125 10.0695L14.4713 3.54953C14.7613 3.25953 15.2413 3.25953 15.5312 3.54953C15.8212 3.83953 15.8212 4.31953 15.5312 4.60953L9.01125 11.1295C8.53125 11.6095 8.53125 12.3895 9.01125 12.8695L15.5312 19.3895C15.8212 19.6795 15.8212 20.1595 15.5312 20.4495C15.3813 20.5895 15.1912 20.6695 15.0013 20.6695Z" fill="#292D32"></path>
@@ -397,13 +396,13 @@
         searchInput.oninput = handleSearch;
         let xscr = 0;
         window.onscroll = () => {
-            if (window.innerHeight + window.scrollY >= ((xscr * 700)+(document.body.offsetHeight - 10))){
+            let totalHeightOfContent = document.body.scrollHeight;
+            if (window.innerHeight + window.scrollY >= (totalHeightOfContent)){
                 fetchAndRenderStores();
                 xscr++;
             }
         }; 
         
-        // Panggil fetch pertama kali
         fetchAndRenderStores();
     </script>
 
