--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                                 <h4>Hapus Jadwal</h4>
                                 <p>Yakin ingin menghapus jadwal ini?</p>
                             </div>
-                            <div class="modal-footer" style="gap: 10px;">
+                            <div class="modal-footer" style="gap: 10px;display: flex;flex-wrap: nowrap;white-space: nowrap;">
                                 <button type="button" class="btn gray-btn w-50 m-0" data-bs-dismiss="modal">Batal</button>
                                 <button type="button" class="btn theme-btn w-50 m-0" id="confirmDelete">Hapus</button>
                             </div>
