--- a/listpelanggan.html
+++ b/listpelanggan.html
@@ -65,7 +65,7 @@
 
         .addcust svg {
             position: fixed;
-            bottom: 20px;
+            bottom: 80px;
             right: 20px;
             width: 48px;
             height: 48px;
@@ -97,7 +97,7 @@
             bottom: 0;
             margin: 0 auto;
             z-index: +2;
-            width: calc(100% - 20px);
+            width: calc(100%);
             background: #fff;
             max-width: calc(600px);
             padding: 20px 10px 9px;
@@ -181,7 +181,7 @@
                 </svg>
             </i>
             
-            <div class="offcanvas-footer tbf2 flex-align-center flex-nowrap gap-3 border-0 pt-3 " style='border-bottom:1px solid rgba(var(--line-color), 1);'>
+            <div class="offcanvas-footer tbf2  hide flex-align-center flex-nowrap gap-3 border-0 pt-3 " style='border-bottom:1px solid rgba(var(--line-color), 1);'>
                 <span class="btn theme-btn w-100 mt-0 addcustx">Simpan</span>
                 <a class="btn white-btn title-color w-100 mt-0" href="./index.html">Cancel</a>
             </div>
