--- a/kamera.html
+++ b/kamera.html
@@ -3,40 +3,100 @@
 <head>
 <title>Kamera dengan Lokasi</title>
 <style>
-body, html {
-    margin:0; padding:0; width:100%; height:100%;
-    overflow:hidden; background:#000; display:flex;
-    justify-content:center; align-items:center; font-family:sans-serif; color:white;
-}
-#videoElement { width:100%; height:100%; object-fit:cover; }
-#canvasElement { display:none; }
-#captureButton {
-    position:fixed; bottom:30px; width:70px; height:70px;
-    background:rgba(255,255,255,0.8); border-radius:50%;
-    display:none; justify-content:center; align-items:center;
-    cursor:pointer; box-shadow:0 4px 10px rgba(0,0,0,0.3);
-    transition:transform 0.2s; z-index:1000; animation:pulse 2s infinite;
-}
-#captureButton:hover { transform:scale(1.1); }
-#permissionMessage {
-    position:absolute; top:10%; left:10px; padding:20px;
-    background:rgba(0,0,0,0.7); border-radius:10px; text-align:left; z-index:1001;
-}
-@keyframes pulse {
-    0% { box-shadow:0 0 0 0 rgba(255,255,255,0.7); }
-    70% { box-shadow:0 0 0 20px rgba(255,255,255,0); }
-    100% { box-shadow:0 0 0 0 rgba(255,255,255,0); }
-}
-.spinner {
-    border:4px solid rgba(0,0,0,0.1);
-    border-left-color:#000;
-    border-radius:50%;
-    width:30px;
-    height:30px;
-    animation:spin 1s linear infinite;
-}
-@keyframes spin { 0%{transform:rotate(0deg);} 100%{transform:rotate(360deg);} }
+    body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        background-color: #000;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        font-family: sans-serif;
+        color: white;
+        text-align: center;
+    }
+
+    #videoElement {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    #canvasElement {
+        display: none;
+    }
+
+    #captureButton {
+        position: fixed;
+        bottom: 30px;
+        width: 70px;
+        height: 70px;
+        background-color: rgba(255, 255, 255, 0.8);
+        border-radius: 50%;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        transition: transform 0.2s ease-in-out;
+        z-index: 1000;
+        /* Tambahan untuk animasi pulse */
+        animation: pulse 2s infinite;
+    }
+
+    #captureButton:hover {
+        transform: scale(1.1);
+    }
+
+    .capture-icon {
+        color: #000;
+        font-size: 40px;
+    }
+
+    /* Style untuk pesan peringatan */
+    #permissionMessage {
+        position: absolute;
+        top: 10%;
+        left: 10px;
+        padding: 20px;
+        background-color: rgba(0, 0, 0, 0.7);
+        border-radius: 10px;
+        text-align: left;
+        z-index: 1001;
+    }
+
+    /* Keyframes untuk animasi pulse */
+    @keyframes pulse {
+        0% {
+            box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+        }
+        70% {
+            box-shadow: 0 0 0 20px rgba(255, 255, 255, 0);
+        }
+        100% {
+            box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+        }
+    }
+
+    /* Style untuk spinner */
+    .spinner {
+        border: 4px solid rgba(0, 0, 0, 0.1);
+        border-left-color: #000;
+        border-radius: 50%;
+        width: 30px;
+        height: 30px;
+        animation: spin 1s linear infinite;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
 </style>
+
 </head>
 <body>
 
