--- a/kamera.html
+++ b/kamera.html
@@ -111,9 +111,11 @@
     </div>
 
     <div id="captureButton" onclick="capturePhoto()">
-        <svg width="40" height="40" viewBox="0 0 24 24" fill="#000" xmlns="http://www.w3.org/2000/svg">
-            <path d="M12 5C7.03 5 3 9.03 3 14C3 18.97 7.03 23 12 23C16.97 23 21 18.97 21 14C21 9.03 16.97 5 12 5ZM12 21C8.13 21 5 17.87 5 14C5 10.13 8.13 7 12 7C15.87 7 19 10.13 19 14C19 17.87 15.87 21 12 21ZM12 9C9.79 9 8 10.79 8 13C8 15.21 9.79 17 12 17C14.21 17 16 15.21 16 13C16 10.79 14.21 9 12 9Z"/>
-        </svg>
+        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg">
+            <rect x="3" y="7" width="18" height="14" rx="2" ry="2"/>
+            <circle cx="12" cy="14" r="3"/>
+            <path d="M7 7L9 4H15L17 7"/>
+          </svg>
     </div>
 
 </div>
