--- a/kamera.html
+++ b/kamera.html
@@ -66,6 +66,7 @@
     </div>
 </div>
 
+<script src="./assets/js/script.js"></script>
 <script>
 let video = document.getElementById('videoElement')
 let canvas = document.getElementById('canvasElement')
