--- a/kamera.html
+++ b/kamera.html
@@ -62,7 +62,7 @@
         <p>Anda harus mengizinkan akses lokasi dan kamera untuk menggunakan fitur ini.</p>
     </div>
     <div id="captureButton" onclick="capturePhoto()">
-        <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 512 512"><path d="m415 55.6-133.4 97L505 315a255.8 255.8 0 0 0 6.9-58.9c0-81.1-38-153.5-97-200.5zm-26-18.2A254.5 254.5 0 0 0 256 .1C203.7.1 155 16 114.4 43l51 157zM89 62.1A255.5 255.5 0 0 0 9.4 325h165.1zM19.8 355a256.5 256.5 0 0 0 225.4 157l51-157zM277 511.3a256.6 256.6 0 0 0 219-165.9l-133.6-97z"/></svg>
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"><path d="M6.76 22h10.48c2.76 0 3.86-1.69 3.99-3.75l.52-8.26A3.753 3.753 0 0 0 18 6c-.61 0-1.17-.35-1.45-.89l-.72-1.45C15.37 2.75 14.17 2 13.15 2h-2.29c-1.03 0-2.23.75-2.69 1.66l-.72 1.45C7.17 5.65 6.61 6 6 6 3.83 6 2.11 7.83 2.25 9.99l.52 8.26C2.89 20.31 4 22 6.76 22ZM10.5 8h3" stroke="#FF8A65" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12 18c1.79 0 3.25-1.46 3.25-3.25S13.79 11.5 12 11.5s-3.25 1.46-3.25 3.25S10.21 18 12 18Z" stroke="#FF8A65" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>
     </div>
 </div>
 
@@ -145,7 +145,7 @@
                 .then(r => showToast(r.message, 'success'))
                 .catch(()=>  showToast('Gagal Mengirim Foto', 'danger'))
                 .finally(()=>{
-                    captureButton.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 512 512"><path d="m415 55.6-133.4 97L505 315a255.8 255.8 0 0 0 6.9-58.9c0-81.1-38-153.5-97-200.5zm-26-18.2A254.5 254.5 0 0 0 256 .1C203.7.1 155 16 114.4 43l51 157zM89 62.1A255.5 255.5 0 0 0 9.4 325h165.1zM19.8 355a256.5 256.5 0 0 0 225.4 157l51-157zM277 511.3a256.6 256.6 0 0 0 219-165.9l-133.6-97z"/></svg>';
+                    captureButton.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"><path d="M6.76 22h10.48c2.76 0 3.86-1.69 3.99-3.75l.52-8.26A3.753 3.753 0 0 0 18 6c-.61 0-1.17-.35-1.45-.89l-.72-1.45C15.37 2.75 14.17 2 13.15 2h-2.29c-1.03 0-2.23.75-2.69 1.66l-.72 1.45C7.17 5.65 6.61 6 6 6 3.83 6 2.11 7.83 2.25 9.99l.52 8.26C2.89 20.31 4 22 6.76 22ZM10.5 8h3" stroke="#FF8A65" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path><path d="M12 18c1.79 0 3.25-1.46 3.25-3.25S13.79 11.5 12 11.5s-3.25 1.46-3.25 3.25S10.21 18 12 18Z" stroke="#FF8A65" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path></svg>';
                     captureButton.style.animation = 'pulse 2s infinite'
                     isCapturing = false
                 })
