--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 rightCol.innerHTML = `
                     <p class="mb-2">
                         <span class="status-dot"></span>
-                        <span id="clockInTime">Check In : ${jam} WIB</span>
+                        <span id="clockInTime">Check In : ${jam} </span>
                     </p>
                     <button onclick='logout()' class="btn btn-clock mb-2" id="btnClock" style="background: #c53f3f;color: #fff;border: none;">
                         Keluar Akun
