--- a/listpelanggan.html
+++ b/listpelanggan.html
@@ -251,7 +251,7 @@
             const hari = String(getHariMon1(now));
             const userCode = document.getElementById("usercode")?.value || "";
             const payload = {
-                carcode: store.CardCode,
+                cardcode: store.CardCode,
                 cardname: store.CardName,
                 usercode: userCode,
                 foto: null,
